--- a/use-contact/package.json
+++ b/use-contact/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://jaxs.onl/use-contact/",
   "scripts": {
-    "build": "bun build ./src/index.ts --outdir ./lib --external react --minify --define __isDev__=false",
+    "build": "cp ./src/types.ts lib/types.d.ts && bun build ./src/index.ts --outdir ./lib --external react --minify --define __isDev__=false",
     "clean": "rimraf lib/use-contacts.dev.js lib/use-contacts.js lib/use-contacts.module.dev.js lib/use-contacts.module.js lib/index.d.ts",
     "format": "prettier --write \"{src,tests}/**/*.{jsx,js,tsx,ts}\""
   },
