Add build steps

--- a/use-contact/tsconfig.json
+++ b/use-contact/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "declarationDir": "./lib",
     "declaration": true,
-    "noEmit": true,
+    "noEmit": false,
     "incremental": true,
     "isolatedModules": true,
     "downlevelIteration": true,
