Add legacy builds

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /use-contact/lib/use-contacts.mjs
 /use-contact/lib/use-contacts.dev.mjs
 /use-contact/lib/types.d.ts
+/use-contact/lib/use-contacts.js
+/use-contact/lib/use-contacts.dev.js
