--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/use-contact/lib/use-contacts.mjs
-/use-contact/lib/use-contacts.dev.mjs
-/use-contact/lib/types.d.ts
-/use-contact/lib/use-contacts.js
-/use-contact/lib/use-contacts.dev.js
+/use-contacts/lib/use-contacts.mjs
+/use-contacts/lib/use-contacts.dev.mjs
+/use-contacts/lib/types.d.ts
+/use-contacts/lib/use-contacts.js
+/use-contacts/lib/use-contacts.dev.js
