--- a/use-contacts/package.json
+++ b/use-contacts/package.json
@@ -29,7 +29,8 @@
     "lint": "eslint \"src/**/*.{jsx,js,tsx,ts}\"",
     "typecheck": "tsc ./src/index.ts --noEmit",
     "types": "cp ./src/types.ts lib/types.d.ts",
-    "build": "bun run typecheck && bun run clean && bun run types && bun run build:module && bun run build:dev:module && bun run build:legacy && bun run build:dev:legacy",
+    "build": "bun lint && bun build:nolint",
+    "build:nolint": "bun typecheck && bun clean && bun types && bun build:module && bun build:dev:module && bun run build:legacy && bun build:dev:legacy",
     "build:module": "bun build ./src/index.ts --outdir ./lib --external react --minify --define __isDev__=false --entry-naming=use-contacts.mjs",
     "build:dev:module": "bun build ./src/index.ts --outdir ./lib --external react --minify --define __isDev__=true --entry-naming=use-contacts.dev.mjs",
     "build:dev:legacy": "esbuild ./lib/use-contacts.dev.mjs --outfile=./lib/use-contacts.dev.js --format=cjs --minify",
@@ -51,6 +52,7 @@
     "eslint": "^8.49.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "microbundle": "^0.15.1",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
