--- a/packages/use-contact-demo/package.json
+++ b/packages/use-contact-demo/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "bun run --cwd ../../packages/use-contacts build && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -20,6 +20,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "use-contacts": "*",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
