--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "installCommand": "curl -fsSL https://bun.sh/install | bash && ~/.bun/bin/bun install && export BUN_INSTALL=\"$HOME/.bun\" && export PATH=$BUN_INSTALL/bin:$PATH && echo $PATH",
+  "installCommand": "curl -fsSL https://bun.sh/install | bash && ~/.bun/bin/bun install && alias bun=\"~/.bun/bin/bun\"",
   "buildCommand": "~/.bun/bin/bun run build"
 }
