Exapnd full bun path

--- a/packages/use-contacts/package.json
+++ b/packages/use-contacts/package.json
@@ -29,10 +29,10 @@
     "lint": "eslint \"src/**/*.{jsx,js,tsx,ts}\"",
     "typecheck": "tsc ./src/index.ts --noEmit",
     "types": "cp ./src/types.ts lib/types.d.ts",
-    "build": "bun lint && bun build:nolint",
-    "build:nolint": "bun typecheck && bun clean && bun types && bun build:module && bun build:dev:module && bun run build:legacy && bun build:dev:legacy",
-    "build:module": "bun build ./src/index.ts --outdir ./lib --external react --minify --define __isDev__=false --entry-naming=use-contacts.mjs",
-    "build:dev:module": "bun build ./src/index.ts --outdir ./lib --external react --minify --define __isDev__=true --entry-naming=use-contacts.dev.mjs",
+    "build": "~/.bun/bin/bun lint && ~/.bun/bin/bun build:nolint",
+    "build:nolint": "~/.bun/bin/bun typecheck && ~/.bun/bin/bun clean && ~/.bun/bin/bun types && ~/.bun/bin/bun build:module && ~/.bun/bin/bun build:dev:module && ~/.bun/bin/bun run build:legacy && ~/.bun/bin/bun build:dev:legacy",
+    "build:module": "~/.bun/bin/bun build ./src/index.ts --outdir ./lib --external react --minify --define __isDev__=false --entry-naming=use-contacts.mjs",
+    "build:dev:module": "~/.bun/bin/bun build ./src/index.ts --outdir ./lib --external react --minify --define __isDev__=true --entry-naming=use-contacts.dev.mjs",
     "build:dev:legacy": "esbuild ./lib/use-contacts.dev.mjs --outfile=./lib/use-contacts.dev.js --format=cjs --minify",
     "build:legacy": "esbuild ./lib/use-contacts.mjs --outfile=./lib/use-contacts.js --format=cjs --minify",
     "clean": "rimraf lib/use-contacts.dev.js lib/use-contacts.js lib/use-contacts.dev.mjs lib/use-contacts.mjs",
