--- a/packages/use-contacts/package.json
+++ b/packages/use-contacts/package.json
@@ -1,7 +1,7 @@
 {
   "name": "use-contacts",
   "version": "0.1.0",
-  "description": "",
+  "description": "Typesafe Contact Picker API wrapper for React",
   "main": "lib/index.js",
   "module": "lib/index.mjs",
   "sideEffects": false,
