--- a/packages/use-contacts/package.json
+++ b/packages/use-contacts/package.json
@@ -41,13 +41,14 @@
   "peerDependencies": {
     "react": "^0.13.0 || ^0.14.0 || >=15"
   },
-  "dependencies": {},
+  "dependencies": { "@jest/globals": "^29.7.0", "@testing-library/react": "^14.0.0" },
   "devDependencies": {
+    "@happy-dom/global-registrator": "^12.0.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
-    "bun-types": "latest",
+    "bun-types": "^1.0.2",
     "esbuild": "^0.19.2",
     "eslint": "^8.49.0",
     "eslint-plugin-prettier": "^5.0.0",
