--- a/packages/use-contacts/tsconfig.json
+++ b/packages/use-contacts/tsconfig.json
@@ -11,7 +11,6 @@
     "allowJs": false,
     "module": "ESNext",
     "target": "ESNext",
-    "allowSyntheticDefaultImports": true,
     "moduleResolution": "bundler",
     "outDir": "dist",
     "experimentalDecorators": true,
@@ -23,11 +22,16 @@
     "sourceMap": false,
     "noUnusedLocals": false,
     "strict": false,
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "types": ["bun-types"]
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.tsx"
+    "src/**/*.tsx",
+    "./index.d.ts"
   ],
   "exclude": ["node_modules", "lib"]
 }
