--- a/packages/use-contacts/package.json
+++ b/packages/use-contacts/package.json
@@ -26,8 +26,9 @@
   },
   "homepage": "https://jaxs.onl/use-contacts/",
   "scripts": {
+    "test": "bun typecheck && bun test",
     "lint": "eslint \"src/**/*.{jsx,js,tsx,ts}\"",
-    "typecheck": "tsc ./src/index.ts --noEmit",
+    "typecheck": "tsc --p .",
     "types": "cp ./src/types.ts lib/types.d.ts",
     "build": "~/.bun/bin/bun lint && ~/.bun/bin/bun build:nolint",
     "build:nolint": "~/.bun/bin/bun typecheck && ~/.bun/bin/bun clean && ~/.bun/bin/bun types && ~/.bun/bin/bun build:module && ~/.bun/bin/bun build:dev:module && ~/.bun/bin/bun run build:legacy && ~/.bun/bin/bun build:dev:legacy",
@@ -48,7 +49,7 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
-    "bun-types": "^1.0.2",
+    "bun-types": "v1.0.1",
     "esbuild": "^0.19.2",
     "eslint": "^8.49.0",
     "eslint-plugin-prettier": "^5.0.0",
