--- a/packages/use-contacts/tsconfig.json
+++ b/packages/use-contacts/tsconfig.json
@@ -1,37 +1,39 @@
 {
   "compilerOptions": {
+    "types": ["bun-types"],
+    "lib": ["esnext"],
+    "module": "esnext",
+    "target": "esnext",
+    "moduleResolution": "bundler",
+    "noEmit": true,
+    "allowImportingTsExtensions": true,
+    "moduleDetection": "force",
+    "jsx": "react-jsx",
+    "allowJs": false,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "declarationDir": "./lib",
     "declaration": true,
-    "noEmit": false,
     "incremental": true,
     "isolatedModules": true,
     "downlevelIteration": true,
-    "skipLibCheck": true,
-    "moduleDetection": "force",
-    "allowJs": false,
-    "module": "ESNext",
-    "target": "ESNext",
-    "moduleResolution": "bundler",
     "outDir": "dist",
     "experimentalDecorators": true,
-    "jsx": "preserve",
-    "lib": ["dom", "dom.iterable", "es2017"],
     "noUnusedParameters": false,
     "preserveConstEnums": true,
     "removeComments": false,
     "sourceMap": false,
     "noUnusedLocals": false,
     "strict": false,
-    "baseUrl": "./src",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "types": ["bun-types"]
+    "baseUrl": "./src"
+
   },
   "include": [
+    "index.d.ts",
     "src/**/*.ts",
-    "src/**/*.tsx",
-    "./index.d.ts"
+    "src/**/*.tsx"
   ],
   "exclude": ["node_modules", "lib"]
 }
