Use built in bun on vercel

--- a/packages/use-contact-demo/package.json
+++ b/packages/use-contact-demo/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "~/.bun/bin/bun run --cwd ../../packages/use-contacts build && next build",
+    "build": "bun run --cwd ../../packages/use-contacts build && next build",
     "start": "next start",
     "lint": "next lint"
   },
