--- a/packages/use-contacts/package.json
+++ b/packages/use-contacts/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://jaxs.onl/use-contacts/",
   "scripts": {
-    "test": "bun typecheck && bun test",
+    "test": "bun typecheck && bun test --slient false",
     "lint": "eslint \"src/**/*.{jsx,js,tsx,ts}\"",
     "typecheck": "tsc --p .",
     "types": "cp ./src/types.ts lib/types.d.ts",
@@ -55,6 +55,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "happy-dom": "^12.1.6",
     "microbundle": "^0.15.1",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
