--- a/packages/use-contacts/tsconfig.json
+++ b/packages/use-contacts/tsconfig.json
@@ -26,6 +26,7 @@
     "removeComments": false,
     "sourceMap": false,
     "noUnusedLocals": false,
+    "noUncheckedIndexedAccess": true,
     "strict": false,
     "baseUrl": "./src"
 
