--- a/packages/use-contact-demo/package.json
+++ b/packages/use-contact-demo/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "bun run --cwd ../../packages/use-contacts build && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"{src,tests}/**/*.{jsx,js,tsx,ts}\""
   },
   "dependencies": {
     "@types/node": "20.6.0",
