--- a/packages/use-contact-demo/tsconfig.json
+++ b/packages/use-contact-demo/tsconfig.json
@@ -23,7 +23,8 @@
     "strict": false,
     "noEmit": true,
     "incremental": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "noUncheckedIndexedAccess": true
   },
   "include": [
     "next-env.d.ts",
