--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "README.md"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-site": "bun run --cwd packages/use-contacts-demo build",
+    "build": "bun run --cwd packages/use-contacts build",
+    "test": "bun run --cwd packages/use-contacts test"
   },
   "keywords": [],
   "author": "",
