--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,11 +8,10 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v3
-    - name: Use Node.js
-      uses: actions/setup-node@v3
+    - name: Use Bun
+      uses: oven-sh/setup-bun@v1
       with:
-        node-version: 'v18'
-        registry-url: 'https://registry.npmjs.org'
+        bun-version: latest
     - name: Deploy Info
       env:
         GITHUB_CONTEXT: ${{ toJson(github) }}
