--- a/packages/use-contacts-demo/package.json
+++ b/packages/use-contacts-demo/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "bun run --cwd ../../packages/use-contacts build && next build",
+    "build": " next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"{src,tests}/**/*.{jsx,js,tsx,ts}\""
