--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,7 +31,7 @@ jobs:
       run: bun build-site
     - name: Publish
       if: startsWith(github.ref, 'refs/tags/')
-      run: npm publish --access public
+      run: npm --cwd packages/use-contacts publish --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
     - name: Publish Demo
