Fix TypeScript config

--- a/packages/use-contacts/tsconfig.json
+++ b/packages/use-contacts/tsconfig.json
@@ -4,9 +4,8 @@
     "lib": ["esnext"],
     "module": "esnext",
     "target": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "noEmit": true,
-    "allowImportingTsExtensions": true,
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": false,
