--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "README.md"
   ],
   "scripts": {
+    "deploy": "bun run --cwd=packages/use-contacts deploy",
     "build-site": "turbo run build-site",
     "build": "turbo run build",
     "lint": "turbo run lint",
