--- a/packages/use-contacts/package.json
+++ b/packages/use-contacts/package.json
@@ -29,6 +29,7 @@
     "test": "bun typecheck && bun test --slient false",
     "lint": "eslint \"src/**/*.{jsx,js,tsx,ts}\"",
     "typecheck": "tsc --p .",
+    "deploy": "npm --access public",
     "types": "cp ./src/types.ts lib/types.d.ts",
     "build": "bun lint && bun build:nolint",
     "build:nolint": "bun typecheck && bun clean && bun types && bun build:module && bun build:dev:module && bun run build:legacy && bun build:dev:legacy",
