--- a/packages/use-contacts-demo/package.json
+++ b/packages/use-contacts-demo/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build-site": " next build",
     "start-site": "next start",
-    "lint": "next lint"
+    "lint": "biome lint"
   },
   "dependencies": {
     "@types/node": "20.6.0",
