--- a/packages/use-contacts/tsconfig.json
+++ b/packages/use-contacts/tsconfig.json
@@ -28,12 +28,7 @@
     "noUncheckedIndexedAccess": true,
     "strict": false,
     "baseUrl": "./src"
-
   },
-  "include": [
-    "index.d.ts",
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ],
+  "include": ["index.d.ts", "src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "lib"]
 }
