--- a/packages/use-contacts/package.json
+++ b/packages/use-contacts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-contacts",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Typesafe Contact Picker API wrapper for React",
   "main": "lib/index.js",
   "module": "lib/index.mjs",
@@ -33,12 +33,9 @@
   "peerDependencies": {
     "react": "^0.13.0 || ^0.14.0 || >=15"
   },
-  "dependencies": {
-    "@jest/globals": "^29.7.0",
-    "@testing-library/react": "^14.0.0"
-  },
   "devDependencies": {
     "@happy-dom/global-registrator": "^14.12.3",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
